# Anona-Memory-SDK

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
anona/: __init__.py  client.py
anona/integrations/: litellm.py  mcp.py
tests/: test_client.py  test_mcp.py
