[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anona"
version = "0.3.0"
description = "Anona Memory SDK — managed AI memory for intelligent agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Anona Labs" }]
keywords = ["ai", "memory", "agents", "llm", "rag", "mcp"]
dependencies = ["httpx>=0.24"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/anonalabs/Anona-Memory-SDK"
Repository = "https://github.com/anonalabs/Anona-Memory-SDK"

[project.optional-dependencies]
litellm = ["litellm>=1.0"]
mcp = ["mcp>=1.2"]
dev = ["pytest", "pytest-asyncio", "respx", "anyio", "mcp>=1.2"]

[project.scripts]
anona-mcp = "anona.integrations.mcp:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["anona*"]
